[package]
name = "steam-login"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hmac = "0.12"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake"] }
url = "2"
